fix : remove too much margin and fix space between media

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -76,11 +76,6 @@ header img {
     margin: 20px 100px;
 }
 
-/* .dropdown-list button {
-    background: none;
-    border: none;
-} */
-
 
 .dropdown-list {
     display: flex;
@@ -108,6 +103,7 @@ header img {
     background-color: #901C1C;
     color: white;
     top: 445px;
+    z-index: 5;
 }
 
 .dropdown-list-filter li:hover, .dropdown-list-filter li:focus {
@@ -157,18 +153,11 @@ header img {
 .images-gallery {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 7%;
-    /* display: flex;
-    flex-wrap: wrap; */
-    /* width: 100%; */
-    /* justify-content: space-between; */
+    column-gap: 75px;
 }
 
 
 .image-item {
-    /* grid-column: 1 / 3; */
-    /* margin-right: 80px; */
-    /* flex: 1 0 30%; */
     max-width: 350px;
     margin-bottom: 25px;
 }
@@ -309,7 +298,7 @@ header img {
 #contact_modal {
     display: none;
     position: fixed; 
-    z-index: 1; 
+    z-index: 10; 
     left: 0;
     top: 0;
     width: 100%;
